plugins {
    id 'java'
}
group 'org.example'
version '1.0-SNAPSHOT'
repositories {
    mavenCentral()
}
sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

def auto_service_version = '1.0-rc2'
def maven_compiler_plugin_version = '3.5.1'

dependencies {
    compileOnly "com.google.auto.service:auto-service:${auto_service_version}"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    compileOnly "com.google.auto.service:auto-service:${auto_service_version}"
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
    implementation "org.apache.maven.plugins:maven-compiler-plugin:${maven_compiler_plugin_version}"
    implementation 'org.reflections:reflections:0.9.11'
}

jar{
    manifest.attributes("Main-Class": "logypro/testProject/src/main/java/TestApplication.java");
}

test {
    useJUnitPlatform()
}

//apply plugin: 'java'
//tasks.withType(JavaCompile) {
//    group('org.apache.maven.plugins')
//    configurations {
//        source('1.8')
//        targetCompatibility('1.8')
//    }
//    options.compilerArgs.addAll(['--add-modules', 'org.apache.maven.plugins'])
//}